<resources>
    <string name="app_name">إقترب من الله</string>
    <string name="title_home">الرئيسيه</string>
    <string name="quran">القران</string>
    <string name="listener">استماع</string>
    <string name="azkar">الأذكار</string>
    <string-array name="tasbeh">
        <item>أستغفر الله</item>
        <item>سُبْحَانَ اللَّهِ</item>
        <item>الْحَمْدُ لِلَّهِ</item>
        <item>الْلَّهُ أَكْبَرُ</item>
        <item>لَا إِلَهَ إِلَّا اللَّهُ</item>
        <item>لا حَوْلَ وَلا قُوَّةَ إِلا بِاللَّهِ</item>
        <item>سُبْحَانَ اللَّهِ وَبِحَمْدِهِ</item>
        <item>سُبْحَانَ اللهِ العَظِيمِ</item>
        <item>الْلَّهُم صَلِّ وَسَلِم وَبَارِك عَلَى سَيِّدِنَا مُحَمَّد</item>
        <item>سُبْحَانَ اللهِ العَظِيمِ وَبِحَمْدِهِ</item>
        <item>سُبْحَانَ اللَّهِ وَبِحَمْدِهِ, سُبْحَانَ اللَّهِ الْعَظِيمِ</item>
        <item>لَا إلَه إلّا اللهُ وَحْدَهُ لَا شَرِيكَ لَهُ, لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ وَهُوَ عَلَى كُلُّ شَيْءِ قَدِيرِ</item>
    </string-array>
    <string name="more">المزيد</string>
    <string name="islamicAzan">islamicAzan</string>
    <string name="loading">جارى التحميل</string>
    <string name="prayer_name">الصلاه</string>
    <string name="fajr">الفجر</string>
    <string name="sunrise">الشروق</string>
    <string name="duhr">الظهر</string>
    <string name="asr">العصر</string>
    <string name="maghreb">المغرب</string>
    <string name="isha">العشاء</string>
    <string name="time">الوقت</string>
    <string name="error">حدث خطأ</string>
    <string name="ayat">ايات</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="times">مرات</string>
    <string name="namesOfAllah">أسماء الله الحسنى</string>
    <string name="sora">سوره</string>
    <string name="search">بحث</string>
    <string name="favorite">مفضله</string>
    <string name="download">تحميل</string>
    <string name="chooseTasbeh">اختر تسبيحك</string>
    <string name="addTasbeh">أضف تسبيح</string>
    <string name="analyze">احصائيات</string>
    <string name="edit">تعديل</string>
    <string name="cancle">إلغاء</string>
    <string name="ok">حسنا</string>
    <string name="chooseWhatYouNeed">أختر ما تريد</string>
    <string name="readerFav">القُرَّاء المفضلين</string>
    <string name="soraFav">السور المفضله</string>
    <string name="listeningToSave">مساعدتك على الحفظ</string>
    <string name="checkConnection">تحقق من الاتصال بالانترنت</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
    <string name="editTasbeh">تعديل التسبيح</string>
    <string name="update">تحديث</string>
    <string name="delete">حذف</string>
    <string name="updated">تم التحديث</string>
    <string name="deleteConferm">"هل تريد الحذف ؟ "</string>
    <string name="addValidData">الرجاء ملئ البيانات</string>
    <string name="allTasbehData">جميع التسابيح</string>
    <string name="best_day">أفضل يوم</string>
    <string name="best_day_desc">أفضل يوم قمت بعدد تسبيح أكثر</string>
    <string name="no_analysis">لا توجد بيانات بعد</string>
    <string name="best_tasbeh">أفضل تسبيح</string>
    <string name="best_tasbehDesc">أفضل عدد من التسبيح قمت به</string>
    <string name="percentMonth">النسبه المئويه لكل شهر</string>
    <string name="percentTasbeh">النسبه المئويه لكل تسبيح</string>
    <string name="daysWork">عدد ايام التسبيح</string>
    <string name="daysNumDesc">عدد الايام التى قمت فيها بالتسبيح</string>
    <string name="unitComplete">عدد التسبيحات التى قمت بها</string>
    <string name="alert">تنبيه</string>
    <string name="alertDesc">يمكنك التسبيح ولكن لن يتم الاحتفاظ بما قمت به إلا عند اختيار تسبيح ثم البدئ</string>
    <string name="soraStart">بداية الحفظ</string>
    <string name="chooseReader">أختر القارئ</string>
    <string name="ayaNum">رقم الايه</string>
    <string name="soraEnd">نهاية الحفظ</string>
    <string name="ayaRepeat">عدد مرات تكرار الايه الواحده</string>
    <string name="ayaRepeatNum">عدد المرات</string>
    <string name="cycleRepeat">عدد مرات التكرار من البدايه للنهايه</string>
    <string name="openSettings">فتح الموقع</string>
    <string name="openLocation">خدمات الموقع غير مفعله الرجاء تفعيلها</string>
    <string name="cancel">إلغاء</string>
    <string name="qibla">القبلة</string>
    <string-array name="Month">
        <item>يناير</item>
        <item>فبراير</item>
        <item>مارس</item>
        <item>ابريل</item>
        <item>مايو</item>
        <item>يونيو</item>
        <item>يوليو</item>
        <item>اغسطس</item>
        <item>سبتمبر</item>
        <item>اكتوبر</item>
        <item>نوفمبر</item>
        <item>ديسمبر</item>


    </string-array>
    <string name="title_activity_qibla">QiblaActivity</string>
    <string name="compass_hands">Compass Dial</string>
    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shareApp">شارك التطبيق</string>
    <string name="rateApp">قيم التطبيق</string>
    <string name="projectLink">(شارك فى الثواب)رابط المشروع</string>
    <string name="openSource">تطبيق مفتوح المصدر لوجه الله تعالى يمكنك المشاركه فى الثواب من خلال تطوير السورس كود (إن قصرت فمن نفسى ومن الشيطان ، نسالكم الدعاء)</string>
    <string name="downloading">جارى التحميل</string>
    <string name="requiredLocation">تعتمد القبله على الموقع والانترنت</string>
    <string name="hint">تحميل البيانات يتم مره واحده فى التطبيق ، الرجاء الانتظار لدقيقه لتحميل جميع البيانات ،الرجاء عدم الخروج من التطبيق ، أوقات الصلاة هنا تقديرية و لا يجب الاعتماد عليها بشكل أساسي.</string>
    <string name="salahNow">حان الان موعد الصلاه</string>
    <string name="developed_by"> مطور بواسطة مجاهد </string>
    <string name="start">إبدأ</string>
    <string name="ayaWrong">نهايه السوره اكبر من البدايه</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="generalSettings">عام</string>
    <string name="dark_mode"> تمكين الوضع الداكن </string>
    <string name="settings">الاعدادات</string>
    <string name="need_permissions">نحتاج الاذن</string>
    <string name="downloading_all_files">جاري تحميل كل السور</string>
    <string name="no_fav_reciter">لا يوجد قراء مفضلين بعد</string>
    <string name="no_fav_surah">لا يوجد سور مفضلة بعد</string>
    <string name="no_fav_ayat">لا يوجد آيات مفضلة بعد</string>
    <string name="no_fav_azkar">لا يوجد أذكار مفضلة بعد</string>
    <string name="listening_to_save">الاستماع للحفظ</string>
    <string name="memorization_completed">تم إكمال الحفظ بنجاح</string>
    <string name="repeat">تكرار</string>
    <string name="pause">إيقاف مؤقت</string>
    <string name="resume">استكمال</string>
    <string name="stopped">تم الإيقاف</string>
    <string name="position_format">%1$d / %2$d</string>
    <string name="create_new_schedule">إنشاء جدول حفظ جديد</string>
    <string name="schedule_data">معلومات الجدول</string>
    <string name="schedule_name">اسم الجدول</string>
    <string name="schedule_description">وصف الجدول (اختياري)</string>
    <string name="schedule_creation_title">إنشاء جدول حفظ جديد</string>
    <string name="select_memorization_range">اختيار نطاق الحفظ</string>
    <string name="select_surah">اختر السورة</string>
    <string name="first_verse">الآية الأولى</string>
    <string name="last_verse">الآية الأخيرة</string>
    <string name="total_verses_undefined">إجمالي الآيات: غير محدد</string>
    <string name="schedule_settings_title">إعدادات الجدول</string>
    <string name="total_verses_count">إجمالي الآيات: %1$d</string>
    <string name="daily_verses_hint">آيات يومية</string>
    <string name="start_date_hint">تاريخ البدء</string>
    <string name="estimated_completion_undefined">التاريخ المتوقع للإنهاء: غير محدد</string>
    <string name="preview_schedule_title">معاينة الجدول</string>
    <string name="estimated_completion_date">التاريخ المتوقع للإنهاء: %1$s</string>
    <string name="preview_content_placeholder">سيتم عرض معاينة الجدول هنا...</string>
    <string name="cancel_button_text">إلغاء</string>
    <string name="create_schedule_button_text">إنشاء الجدول</string>
    <string name="active_memorization_schedule">جدول الحفظ النشط</string>
    <string name="example_schedule_title">سورة البقرة - الآيات 1-20</string>
    <string name="today_progress_label">آيات اليوم</string>
    <string name="current_streak_label">أيام متتالية</string>
    <string name="total_progress_percentage_label">نسبة الحفظ</string>
    <string name="total_verses_count_label">عدد الآيات</string>
    <string name="create_schedule_button">إنشاء جدول حفظ</string>
    <string name="stop">إيقاف نهائي</string>
    <string name="next_verse">الآية التالية</string>
    <string name="toolbar_hefz_repeat">شريط الأدوات لشاشة تكرار الحفظ</string>
    <string name="verse_position_indicator">مؤشر موضع الآية (مثال: ١ من ١)</string>
    <string name="verses_pager">اسحب لليمين أو اليسار للتنقل بين الآيات</string>
    <string name="memorization_controls">أزرار التحكم في الحفظ</string>
    <string name="stop_memorization_button">إيقاف الحفظ</string>
    <string name="pause_resume_button">إيقاف مؤقت أو استئناف الحفظ</string>
    <string name="skip_forward_button">الانتقال إلى الآية التالية</string>
    <string name="cancel_memorization_button">إلغاء جلسة الحفظ</string>
    <string name="advice_card">بطاقة تحتوي على عنوان ونص توجيهي وصورة</string>
    <string name="advice_title">العنوان: أخي المسلم</string>
    <string name="advice_message">النص التوجيهي</string>
    <string name="advice_image_alert">صورة توضيحية للتنبيه</string>
    <string name="more_card">بطاقة تحتوي على قسم المزيد</string>
    <string name="more_title">عنوان القسم: المزيد</string>
    <string name="tasbeh_card_desc">بطاقة تحتوي على حقل إدخال للتسبيح مع أزرار التحديث والحذف</string>
    <string name="tasbeh_input_desc">حقل إدخال لكتابة نص التسبيح</string>
    <string name="tasbeh_edit_text_desc">مربع نص لإدخال أو تعديل نص التسبيح</string>
    <string name="update_button_desc">زر لتحديث نص التسبيح</string>
    <string name="delete_button_desc">زر لحذف نص التسبيح</string>
    <string name="desc_toolbar">شريط الأدوات</string>
    <string name="desc_main_image_dial">صورة قرص الاتجاهات</string>
    <string name="desc_sotw_label">تسمية الاتجاه</string>
    <string name="qibla_direction_text">اتجاه القبلة (سيتغير لون الخلفية عند القبلة الصحيحة)</string>
    <string name="desc_qibla_text">نص يوضح اتجاه القبلة</string>
    <string name="desc_recycler_view">قائمة الصور أو العناصر</string>
    <string name="desc_player_card">بطاقة مشغل الصوت</string>
    <string name="desc_play_button">زر التشغيل</string>
    <string name="desc_listening_options">خيارات الاستماع</string>
    <string name="desc_progress_bar">مؤشر التحميل</string>
    <string name="tasbih_screen_ar">شاشة المسبحة</string>
    <string name="tasbih_image_ar">صورة المسبحة</string>
    <string name="counter_container_ar">حاوية العداد</string>
    <string name="counter_value_ar">قيمة العداد</string>
    <string name="increase_button_ar">زر زيادة العداد</string>
    <string name="reset_button_ar">زر إعادة الضبط</string>
</resources>