<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_quran"
        android:icon="@drawable/quran_icon"
        android:title="@string/quran" />

    <item
        android:id="@+id/navigation_listener"
        android:icon="@drawable/ic_baseline_queue_music_24"
        android:title="@string/listener" />

    <item
        android:id="@+id/navigation_azkar"
        android:icon="@drawable/prayer_icon"
        android:title="@string/azkar" />

    <item
        android:id="@+id/navigation_tasbeh"
        android:icon="@drawable/tasbeh_icon"
        android:title="@string/tasbeh" />

    <!--



    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/more" />-->


</menu>