<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_3sdp"
    app:cardElevation="@dimen/_3sdp"
    android:padding="@dimen/_2sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    android:layout_width="match_parent"
    android:contentDescription="@string/tasbeh_card_desc">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_3sdp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/tasbeh"
            android:id="@+id/editTasbehText"
            android:layout_gravity="center"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/tasbeh_input_desc">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:contentDescription="@string/tasbeh_edit_text_desc"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@color/text_color"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            app:layout_constraintTop_toBottomOf="@+id/editTasbehText"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/update_button_desc"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/text_color"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            app:layout_constraintTop_toBottomOf="@+id/editTasbehText"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/delete_button_desc"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
