<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_data.presentation.ui.hefz.HefzRepeatActivity">

    <include
        layout="@layout/custom_toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/toolbar_hefz_repeat" />

    <TextView
        android:id="@+id/position_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/custom_button"
        android:padding="@dimen/_5sdp"
        android:text="1 / 1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_14ssp"
        android:contentDescription="@string/verse_position_indicator" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/position_indicator"
        android:layout_above="@+id/control_buttons_layout"
        android:contentDescription="@string/verses_pager" />

    <LinearLayout
        android:id="@+id/control_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:contentDescription="@string/memorization_controls" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stop_memorization"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_2sdp"
            android:background="@drawable/custom_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/stop"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp"
            android:contentDescription="@string/stop_memorization_button"
            app:backgroundTint="@null"
            app:iconSize="24dp"
            app:icon="@drawable/ic_stop"
            app:iconGravity="top" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pause_resume_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:background="@drawable/custom_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/pause"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp"
            android:contentDescription="@string/pause_resume_button"
            app:backgroundTint="@null"
            app:iconSize="24dp"
            app:icon="@drawable/ic_pause"
            app:iconGravity="top" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skip_forward_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_2sdp"
            android:background="@drawable/custom_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/next_verse"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp"
            android:contentDescription="@string/skip_forward_button"
            app:backgroundTint="@null"
            app:iconSize="24dp"
            app:icon="@drawable/ic_skip_next"
            app:iconGravity="top" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/custom_button"
        android:padding="@dimen/_3sdp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_16ssp"
        android:contentDescription="@string/cancel_memorization_button"
        app:backgroundTint="@null" />

</RelativeLayout>
