<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".feature_data.presentation.ui.QuranImageFragment">

    <include
        layout="@layout/custom_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:contentDescription="@string/desc_toolbar" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:id="@+id/progressBar"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:contentDescription="@string/desc_progress_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/desc_recycler_view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/playerCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="@dimen/_3sdp"
        android:contentDescription="@string/desc_player_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/playImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play"
                android:rotation="180"
                app:tint="@color/primary_color"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:contentDescription="@string/desc_play_button" />

            <TextView
                android:id="@+id/readerNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chooseReader"
                android:gravity="start"
                android:layout_gravity="center"
                android:fontFamily="@font/amiri_bold"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:includeFontPadding="false" />

            <ImageView
                android:id="@+id/listeningOptionsImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_settings_24"
                app:tint="@color/primary_color"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/desc_listening_options" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
