<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.megahed.eqtarebmenalla.feature_data.presentation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_quran"
        android:name="com.megahed.eqtarebmenalla.feature_data.presentation.ui.quran.QuranFragment"
        android:label="@string/quran"
        tools:layout="@layout/fragment_quran" />

    <fragment
        android:id="@+id/navigation_listener"
        android:name="com.megahed.eqtarebmenalla.feature_data.presentation.ui.quranListener.QuranListenerFragment"
        android:label="@string/listener"
        tools:layout="@layout/fragment_quran_listener" />





</navigation>