<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_3sdp"
    app:cardElevation="@dimen/_3sdp"
    android:padding="@dimen/_3sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    android:layout_height="wrap_content"
    android:contentDescription="@string/more_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/name"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold"
            android:text="@string/more"
            android:layout_margin="@dimen/_3sdp"
            android:padding="@dimen/_5sdp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:contentDescription="@string/more_title"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
