<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:layoutDirection="ltr"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:contentDescription="@string/tasbih_screen_ar">

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/tasbehImage"
        android:src="@drawable/tasbi1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="@dimen/_300sdp"
        android:contentDescription="@string/tasbih_image_ar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/tasbehImage"
        app:layout_constraintTop_toTopOf="@+id/tasbehImage"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/counter_container_ar">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/textCountar"
            android:text="0"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical|end"
            android:textSize="@dimen/_36ssp"
            android:fontFamily="@font/digital"
            android:layout_height="wrap_content"
            android:contentDescription="@string/counter_value_ar"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_130sdp"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_75sdp"
        android:id="@+id/increaseButton"
        app:layout_constraintBottom_toBottomOf="@+id/tasbehImage"
        app:layout_constraintTop_toTopOf="@+id/tasbehImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tasbehImage"
        android:background="@drawable/custom_button_click"
        android:contentDescription="@string/increase_button_ar"/>

    <ImageButton
        android:layout_marginStart="@dimen/_78sdp"
        android:layout_marginTop="@dimen/_57sdp"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:id="@+id/resetButton"
        app:layout_constraintBottom_toBottomOf="@+id/tasbehImage"
        app:layout_constraintTop_toTopOf="@+id/tasbehImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tasbehImage"
        android:background="@drawable/custom_button_click"
        android:contentDescription="@string/reset_button_ar"/>

</androidx.constraintlayout.widget.ConstraintLayout>